--- a/zCzosnkowymApi/zCzosnkowym.Api/appsettings.json
+++ b/zCzosnkowymApi/zCzosnkowym.Api/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "zCzosnkowym": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=zCzosnkowym;Integrated Security=True;Connect Timeout=30;"
+    "zCzosnkowym": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=zCzosnkowym;Integrated Security=True;Connect Timeout=30;",
+    "zCzosnkowym-sqllite":"Data Source=zCzosnkowym.db"
   }
 }
